# creduent-python

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE-APACHE  LICENSE-COMMERCIAL  README.md  SECURITY.md  pyproject.toml  setup.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-format.yml  ci.yml
.github/workflows_disabled/: auto-format.yml  publish.yml
creduent/: __init__.py  attest.py  challenge.py  cli.py  crypto.py  discovery.py  exceptions.py  register.py  renew.py  sign.py  utils.py  verify.py  webhook.py
creduent/integrations/: __init__.py  autogen.py  crewai.py  langgraph.py
tests/: test_challenge.py  test_integrations.py  test_sdk.py
