[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "creduent"
version = "2.0.2"
description = "Creduent Protocol SDK - open standard for cryptographic AI agent identity, Ed25519 signing, DNS verification, and attestation registry"

authors = [
    {name = "IDevSec", email = "contact@idevsec.com"}
]
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "creduent",
    "ai-agent",
    "agent-identity",
    "agent-trust",
    "cryptographic-signing",
    "ed25519",
    "attestation",
    "agent-json",
    "open-standard",
    "mcp",
    "model-context-protocol",
    "dns-verification",
    "ai-security",
    "autonomous-agent",
    "jcs",
    "rfc8785",
    "idevsec"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Security :: Cryptography",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "Development Status :: 4 - Beta",
]
dependencies = [
    "cryptography",
    "requests",
    "jcs",
    "PyYAML",
]

[project.optional-dependencies]
crewai = ["crewai"]
langgraph = ["langgraph"]
autogen = ["autogen"]
all = ["crewai", "langgraph", "autogen"]

[project.urls]
Homepage = "https://idevsec.com/creduent"
Documentation = "https://idevsec.com/creduent/docs"
Repository = "https://github.com/idevsec/creduent-python"
Changelog = "https://github.com/idevsec/creduent-python/blob/main/CHANGELOG.md"

[project.scripts]
creduent = "creduent.cli:main"

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["."]
include = ["creduent*"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:starlette.*",
    "ignore::DeprecationWarning:fastapi.*",
    "ignore:.*Using `httpx` with `starlette.testclient` is deprecated.*",
]
